--- a/br_flickr/Info.plist
+++ b/br_flickr/Info.plist
@@ -11,13 +11,17 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>$(APP_NAME)</string>
 	<key>CFBundlePackageType</key>
 	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>14</string>
+	<key>FLICKR_API_KEY</key>
+	<string>$(FLICKR_API_KEY)</string>
+	<key>FLICKR_ROOT_URL</key>
+	<string>$(FLICKR_ROOT_URL)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIApplicationSceneManifest</key>
